--- a/Fabrikam Food/Fabrikam_Food.iOS/packages.config
+++ b/Fabrikam Food/Fabrikam_Food.iOS/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Mobile" version="0.2.0" targetFramework="xamarinios1" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios1" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios1" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios1" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="xamarinios1" />
+  <package id="Xam.Plugin.Geolocator" version="3.0.4" targetFramework="xamarinios1" />
   <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="xamarinios1" />
 </packages>
