--- a/Fabrikam Food/Fabrikam_Food.Droid/Properties/AndroidManifest.xml
+++ b/Fabrikam Food/Fabrikam_Food.Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="com.yk.fabrikamfood">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="Fabrikam_Food.Droid"></application>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="Fabrikam_Food.Droid">
+    <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBSXf5GEuIhPSh9s-t9Q3R0gL4abdUQUWo" />
+    <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+  </application>
 	<activity android:name="Fabrikam_Food.Droid.MapActivity" />
 </manifest>
