--- a/Fabrikam Food/Fabrikam_Food.iOS/packages.config
+++ b/Fabrikam Food/Fabrikam_Food.iOS/packages.config
@@ -7,4 +7,5 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="xamarinios1" />
   <package id="Xam.Plugin.Geolocator" version="3.0.4" targetFramework="xamarinios1" />
   <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="xamarinios1" />
+  <package id="Xamarin.Forms.Maps" version="2.3.2.127" targetFramework="xamarinios1" />
 </packages>
