--- a/Fabrikam Food/Fabrikam_Food.Droid/packages.config
+++ b/Fabrikam Food/Fabrikam_Food.Droid/packages.config
@@ -6,7 +6,8 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="monoandroid6" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid6" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="monoandroid6" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="monoandroid6" />
+  <package id="Microsoft.ProjectOxford.Common" version="1.0.308" targetFramework="monoandroid6" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="monoandroid6" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid6" />
   <package id="Plugin.Permissions" version="1.1.7" targetFramework="monoandroid6" />
   <package id="SQLitePCLRaw.bundle_green" version="1.0.0" targetFramework="monoandroid6" />
