--- a/Fabrikam Food/Fabrikam_Food.iOS/packages.config
+++ b/Fabrikam Food/Fabrikam_Food.iOS/packages.config
@@ -4,7 +4,8 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios1" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios1" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios1" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="xamarinios1" />
+  <package id="Microsoft.ProjectOxford.Common" version="1.0.308" targetFramework="xamarinios1" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="xamarinios1" />
   <package id="Xam.Plugin.Geolocator" version="3.0.4" targetFramework="xamarinios1" />
   <package id="Xamarin.Forms" version="2.3.2.127" targetFramework="xamarinios1" />
   <package id="Xamarin.Forms.Maps" version="2.3.2.127" targetFramework="xamarinios1" />
