--- a/Fabrikam Food/Fabrikam_Food/Fabrikam_Food.csproj
+++ b/Fabrikam Food/Fabrikam_Food/Fabrikam_Food.csproj
@@ -36,13 +36,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AzureManager.cs" />
+    <Compile Include="DataModels\GoogleMapObject.cs" />
     <Compile Include="DataModels\Menu.cs" />
+    <Compile Include="DataModels\Reservations.cs" />
     <Compile Include="ViewModels\MapViewModel.cs" />
     <Compile Include="App.cs" />
-    <Compile Include="MenuItem.cs" />
-    <Compile Include="MenuListData.cs" />
-    <Compile Include="MenuListView.cs" />
+    <Compile Include="Views\MapAnalytics.xaml.cs">
+      <DependentUpon>MapAnalytics.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MenuItem.cs" />
+    <Compile Include="Views\MenuListData.cs" />
+    <Compile Include="Views\MenuListView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ReservationViewModel.cs" />
+    <Compile Include="Views\FirstPage.cs" />
     <Compile Include="Views\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
@@ -51,22 +58,28 @@
       <DependentUpon>MenuListPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MenuPage.cs" />
-    <Compile Include="Views\ReservationsPage.cs" />
+    <Compile Include="Views\ReservationsPage.xaml.cs">
+      <DependentUpon>ReservationsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\RootPage.cs" />
-    <Compile Include="Views\SettingsPage.cs" />
     <Compile Include="Views\SmartHelperPage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="GettingStarted.Xamarin" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ProjectOxford.Common, Version=1.0.308.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.ProjectOxford.Common.1.0.308\lib\portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10\Microsoft.ProjectOxford.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.WindowsAzure.Mobile, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Azure.Mobile.Client.3.0.3\lib\portable-win+net45+wp8+wpa81+monotouch+monoandroid\Microsoft.WindowsAzure.Mobile.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.2\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Plugin.Geolocator, Version=3.0.4.0, Culture=neutral, processorArchitecture=MSIL">
@@ -118,6 +131,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\MenuListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ReservationsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\MapAnalytics.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
