--- a/Fabrikam Food/Fabrikam_Food.Droid/Fabrikam_Food.Droid.csproj
+++ b/Fabrikam Food/Fabrikam_Food.Droid/Fabrikam_Food.Droid.csproj
@@ -202,6 +202,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoadingActivity.cs" />
     <Compile Include="MainApplication.cs" />
     <Compile Include="MapActivity.cs" />
     <Compile Include="MainActivity.cs" />
@@ -236,6 +237,12 @@
       <Project>{3d314acd-01bc-41cc-a6be-dc47249fc5da}</Project>
       <Name>Fabrikam_Food</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\LoadingScreen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\fabrikaminside.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
