--- a/Fabrikam Food/Fabrikam_Food.Droid/Properties/AndroidManifest.xml
+++ b/Fabrikam Food/Fabrikam_Food.Droid/Properties/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="Fabrikam_Food.Droid">
+	<application android:label="Fabrikam Food" android:icon="@drawable/icon">
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBSXf5GEuIhPSh9s-t9Q3R0gL4abdUQUWo" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 	</application>
